// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio should display careers projects 1`] = `
<div>
  <div
    class="p-base pt-xs xxxl:p-md xxxl:pt-sm !pt-0"
    id="read"
  >
    <div
      class="flex flex-col h-full"
    >
      <div
        class="w-full py-sm xxxl:py-base gap-base xxxl:gap-md bg-neutral-200 z-higher sticky flex shrink-0 items-center justify-between"
        style="top: 0px;"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 flex items-end gap-xs"
        >
          <h1
            class="text-base xxxl:text-lg mb-0 leading-base"
          >
            Portfolio
          </h1>
          <div
            class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-success-100 text-success-500 rounded-sm p-xxs text-xs gap-xxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            Published
          </div>
        </div>
        <div
          class="flex gap-base min-w-0 grow"
        >
          <div
            class="min-w-0 grow"
          >
            <span
              data-state="closed"
            >
              <div
                class="flex gap-xs bg-white border border-neutral-300 rounded-sm items-center px-xs min-w-0"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 shrink-0"
                    data-testid="icon"
                  >
                    <div
                      class="h-sm w-sm"
                    />
                  </div>
                </div>
                <div
                  class="overflow-hidden text-xxs xxxl:!text-xs overflow-ellipsis whitespace-nowrap min-w-0 leading-[30px] xxxl:leading-[38px]"
                >
                  undefined/resume/amanda_jewess/testUrl
                </div>
                <span
                  class="ml-auto shrink-0"
                  data-state="closed"
                >
                  <button
                    class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] text-neutral-600 hover:!bg-neutral-200 outline-neutral-400 h-base w-base  !text-neutral-800"
                    data-testid="icon-button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </span>
          </div>
          <div
            class="flex shrink-0"
          >
            <label
              class="switch bg-white px-xs py-xxs xxxl:py-xs border-primary-500 rounded-sm h-md xxxl:h-[40px] mr-sm xxxl:mr-base shrink-0"
            >
              <span
                class="text-xs !text-xxs xxxl:!text-xs"
              >
                Enable share link
              </span>
              <div
                class="content"
              >
                <input
                  checked=""
                  class="switchInput"
                  name="portfolio"
                  role="switch"
                  type="checkbox"
                />
                <span
                  class="slider"
                />
              </div>
            </label>
            <a
              href="/portfolio/resume/amanda_jewess/testUrl"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mr-xs xxxl:mr-sm px-sm xxxl:px-base -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Preview
                </span>
              </button>
            </a>
            <a
              href="/portfolio/edit"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] py-xs px-sm xxxl:px-base -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Edit
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 space-x-base xxxl:space-x-md"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 sticky h-min"
          style="top: 0px;"
        >
          <div
            class="card p-sm xxxl:p-base w-full sticky top-base xxxl:top-md"
          >
            <div
              class="flex justify-between mb-sm xxxl:mb-base"
            >
              <img
                class="rounded-full w-[120px] xxxl:w-[160px] h-[120px] xxxl:h-[160px] border border-neutral-300 object-cover"
                src="student.png"
                title="Amanda Jewess"
              />
            </div>
            <div
              class="flex flex-col text-xxs xxxl:text-xs font-regular leading-lg text-neutral-700"
            >
              <div
                class=" pb-sm"
              >
                <h6
                  class="mb-0 whitespace-nowrap text-neutral-800 text-xs xxxl:text-sm after:h-[1px] after:bg-neutral-300 after:grow flex justify-start items-center gap-sm"
                >
                  <span
                    class="min-w-0 text-ellipsis overflow-hidden"
                  >
                    Amanda Jewess
                  </span>
                </h6>
              </div>
              <div
                class="pb-base xxxl:pb-md"
              >
                some Bio info DC Lorem
              </div>
            </div>
            <div
              class="pb-base"
            >
              <div
                class="flex gap-sm items-center pb-sm"
              >
                <h6
                  class="mb-0 min-w-0 text-neutral-800 text-xs xxxl:text-sm"
                >
                  Contact
                </h6>
                <hr
                  class="flex-1 h-px text-neutral-300"
                />
              </div>
              <div
                class="flex flex-wrap gap-xs"
              >
                <a
                  class="flex !p-xxs xxxl:!p-xs justify-center items-center gap-xxs bg-neutral-200 !text-neutral-800 rounded-sm text-xxs font-medium leading-lg hover:bg-primary-200 hover:!text-primary-500 !no-underline  active:bg-primary-500 active:!text-white"
                  href="mailto:amanda@dc.com"
                  target="_blank"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  amanda@dc.com
                </a>
                <a
                  class="flex !p-xxs xxxl:!p-xs justify-center items-center gap-xxs bg-neutral-200 !text-neutral-800 rounded-sm text-xxs font-medium leading-lg hover:bg-primary-200 hover:!text-primary-500 !no-underline  active:bg-primary-500 active:!text-white"
                  href="tel:414-313-7621"
                  target="_blank"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  414-313-7621
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full h-full flex flex-col min-h-0"
        >
          <div
            class="sticky z-higher pb-sm bg-neutral-200"
            style="top: 0px;"
          >
            <div
              class="triggerListContainer"
            >
              <div
                aria-orientation="horizontal"
                class="triggerList withPadding fullWidth"
                data-orientation="horizontal"
                role="tablist"
                style="outline: none;"
                tabindex="0"
              >
                <button
                  aria-controls="radix-40-content-RESUME"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-40-trigger-RESUME"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Resume
                </button>
                <button
                  aria-controls="radix-40-content-CAREERS"
                  aria-selected="true"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="active"
                  id="radix-40-trigger-CAREERS"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Defined Careers
                </button>
                <button
                  aria-controls="radix-40-content-PBL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-40-trigger-PBL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Learning
                </button>
                <button
                  aria-controls="radix-40-content-PERSONAL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-40-trigger-PERSONAL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Personal
                </button>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="radix-40-trigger-CAREERS"
            class="min-h-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-40-content-CAREERS"
            role="tabpanel"
            tabindex="0"
          >
            <div>
              <div
                class="card h-full flex flex-col min-h-0 !pt-0"
              >
                <div
                  class="flex justify-between py-base xxxl:pt-md  bg-white sticky z-high"
                  style="top: 0px;"
                >
                  <h6
                    class="flex items-center min-h-[40px] mb-0 text-neutral-800 text-sm leading-base"
                  >
                    Projects 
                    <span
                      class="ps-xxs text-neutral-600"
                    >
                      (1)
                    </span>
                  </h6>
                </div>
                <div>
                  <div>
                    <div
                      class="mb-xxs xxxl:mb-xs last-of-type:mb-0"
                    >
                      <div
                        class="flex gap-sm xxxl:gap-base bg-white rounded-sm text-font-primary cursor-pointer hover:bg-neutral-200 group/portfolio-project-card p-sm"
                        data-testid="portfolio-project-card"
                      >
                        <div
                          class="wrapper-header basis-[178px] xxxl:basis-[240px] shrink-0"
                        >
                          <div
                            class="wrapper-image group w-full flex-grow h-[100px] max-h-full max-w-[178px] relative rounded-sm overflow-hidden xxxl:h-[136px] xxxl:max-w-[240px]"
                          >
                            <div
                              class="flex gap-xs absolute left-sm top-sm"
                            />
                            <img
                              alt="project-image"
                              class="h-full w-full object-cover object-center"
                              src="http://www.img.com"
                            />
                          </div>
                        </div>
                        <div
                          class="grow"
                        >
                          <header
                            class="flex justify-between mb-xs"
                          >
                            <div
                              class="w-full"
                            >
                              <div
                                class="flex justify-between"
                              >
                                <div
                                  class="font-xs leading-lg text-xs mb-xxs text-neutral-700"
                                >
                                  Statisticians
                                </div>
                                <div
                                  class="ms-auto flex gap-xs items-center"
                                >
                                  <span
                                    data-state="closed"
                                  >
                                    <div
                                      class="flex items-center"
                                    >
                                      <div
                                        class="flex"
                                      >
                                        <div
                                          class="flex align-center justify-center grow-0 shrink-0 p-xxs"
                                          data-testid="icon"
                                        >
                                          <div
                                            class="h-sm w-sm"
                                          />
                                        </div>
                                      </div>
                                      <p
                                        class="text-xs leading-lg m-0 whitespace-nowrap"
                                      >
                                        Jan 19, 2024
                                      </p>
                                    </div>
                                  </span>
                                </div>
                              </div>
                              <h6
                                class="text-xs xxxl:text-sm mb-0"
                                data-testid="portfolio-project-card-heading"
                              >
                                Scouting Report
                              </h6>
                            </div>
                          </header>
                          <div
                            class="relative"
                          >
                            <div
                              class="mb-xs text-xxs xxxl:text-xs text-neutral-700 leading-lg [&_a]:break-all line-clamp-2"
                            >
                              Create an electronic scouting report
                            </div>
                          </div>
                          <button
                            class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !pl-0 -link py-xs px-sm !text-xs leading-[14px] !gap-xxs flex-row-reverse text-white"
                            data-testid="button"
                            type="button"
                          >
                            <div
                              class="flex"
                            >
                              <div
                                class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                                data-testid="icon"
                              >
                                <div
                                  class="h-sm w-sm"
                                />
                              </div>
                            </div>
                            <span
                              class="items-center flex justify-center gap-xs"
                            >
                              <span>
                                Show Files
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Portfolio should display empty Defined Learning projects 1`] = `
<div>
  <div
    class="p-base pt-xs xxxl:p-md xxxl:pt-sm !pt-0"
    id="read"
  >
    <div
      class="flex flex-col h-full"
    >
      <div
        class="w-full py-sm xxxl:py-base gap-base xxxl:gap-md bg-neutral-200 z-higher sticky flex shrink-0 items-center justify-between"
        style="top: 0px;"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 flex items-end gap-xs"
        >
          <h1
            class="text-base xxxl:text-lg mb-0 leading-base"
          >
            Portfolio
          </h1>
          <div
            class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-success-100 text-success-500 rounded-sm p-xxs text-xs gap-xxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            Published
          </div>
        </div>
        <div
          class="flex gap-base min-w-0 grow"
        >
          <div
            class="min-w-0 grow"
          >
            <span
              data-state="closed"
            >
              <div
                class="flex gap-xs bg-white border border-neutral-300 rounded-sm items-center px-xs min-w-0"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 shrink-0"
                    data-testid="icon"
                  >
                    <div
                      class="h-sm w-sm"
                    />
                  </div>
                </div>
                <div
                  class="overflow-hidden text-xxs xxxl:!text-xs overflow-ellipsis whitespace-nowrap min-w-0 leading-[30px] xxxl:leading-[38px]"
                >
                  undefined/resume/amanda_jewess/testUrl
                </div>
                <span
                  class="ml-auto shrink-0"
                  data-state="closed"
                >
                  <button
                    class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] text-neutral-600 hover:!bg-neutral-200 outline-neutral-400 h-base w-base  !text-neutral-800"
                    data-testid="icon-button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </span>
          </div>
          <div
            class="flex shrink-0"
          >
            <label
              class="switch bg-white px-xs py-xxs xxxl:py-xs border-primary-500 rounded-sm h-md xxxl:h-[40px] mr-sm xxxl:mr-base shrink-0"
            >
              <span
                class="text-xs !text-xxs xxxl:!text-xs"
              >
                Enable share link
              </span>
              <div
                class="content"
              >
                <input
                  checked=""
                  class="switchInput"
                  name="portfolio"
                  role="switch"
                  type="checkbox"
                />
                <span
                  class="slider"
                />
              </div>
            </label>
            <a
              href="/portfolio/resume/amanda_jewess/testUrl"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mr-xs xxxl:mr-sm px-sm xxxl:px-base -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Preview
                </span>
              </button>
            </a>
            <a
              href="/portfolio/edit"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] py-xs px-sm xxxl:px-base -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Edit
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 space-x-base xxxl:space-x-md"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 sticky h-min"
          style="top: 0px;"
        >
          <div
            class="card p-sm xxxl:p-base w-full sticky top-base xxxl:top-md"
          >
            <div
              class="flex justify-between mb-sm xxxl:mb-base"
            >
              <img
                class="rounded-full w-[120px] xxxl:w-[160px] h-[120px] xxxl:h-[160px] border border-neutral-300 object-cover"
                src="SvgrURL"
                title="Amanda Jewess"
              />
            </div>
            <div
              class="flex flex-col text-xxs xxxl:text-xs font-regular leading-lg text-neutral-700"
            >
              <div
                class=" pb-sm"
              >
                <h6
                  class="mb-0 whitespace-nowrap text-neutral-800 text-xs xxxl:text-sm after:h-[1px] after:bg-neutral-300 after:grow flex justify-start items-center gap-sm"
                >
                  <span
                    class="min-w-0 text-ellipsis overflow-hidden"
                  >
                    Amanda Jewess
                  </span>
                </h6>
              </div>
              <div
                class="pb-base xxxl:pb-md"
              >
                Please add information to continue filling your portfolio's bio.
              </div>
              <a
                href="/portfolio/edit"
              >
                <button
                  class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                  data-testid="button"
                  type="button"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  <span
                    class="items-center flex justify-center gap-xs"
                  >
                    Fill portfolio
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
        <div
          class="w-full h-full flex flex-col min-h-0"
        >
          <div
            class="sticky z-higher pb-sm bg-neutral-200"
            style="top: 0px;"
          >
            <div
              class="triggerListContainer"
            >
              <div
                aria-orientation="horizontal"
                class="triggerList withPadding fullWidth"
                data-orientation="horizontal"
                role="tablist"
                style="outline: none;"
                tabindex="0"
              >
                <button
                  aria-controls="radix-18-content-RESUME"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-18-trigger-RESUME"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Resume
                </button>
                <button
                  aria-controls="radix-18-content-CAREERS"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-18-trigger-CAREERS"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Careers
                </button>
                <button
                  aria-controls="radix-18-content-PBL"
                  aria-selected="true"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="active"
                  id="radix-18-trigger-PBL"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Defined Learning
                </button>
                <button
                  aria-controls="radix-18-content-PERSONAL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-18-trigger-PERSONAL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Personal
                </button>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="radix-18-trigger-PBL"
            class="min-h-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-18-content-PBL"
            role="tabpanel"
            tabindex="0"
          >
            <div>
              <div
                class="card h-full flex flex-col min-h-0 !pt-0"
              >
                <div
                  class="flex justify-between py-base xxxl:pt-md  bg-white sticky z-high"
                  style="top: 0px;"
                />
                <div>
                  <div
                    class="mx-auto text-xs text-center w-[320px] xxxl:w-[360px]"
                  >
                    <div
                      class="mb-sm w-full"
                    />
                    <div
                      class="mx-auto"
                    >
                      <h6>
                        Defined Learning projects are empty.
                      </h6>
                      <p
                        class="text-xs"
                      >
                        You don't have any projects currently. Submit a product to update your portfolio.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Portfolio should display empty careers projects 1`] = `
<div>
  <div
    class="p-base pt-xs xxxl:p-md xxxl:pt-sm !pt-0"
    id="read"
  >
    <div
      class="flex flex-col h-full"
    >
      <div
        class="w-full py-sm xxxl:py-base gap-base xxxl:gap-md bg-neutral-200 z-higher sticky flex shrink-0 items-center justify-between"
        style="top: 0px;"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 flex items-end gap-xs"
        >
          <h1
            class="text-base xxxl:text-lg mb-0 leading-base"
          >
            Portfolio
          </h1>
          <div
            class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-success-100 text-success-500 rounded-sm p-xxs text-xs gap-xxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            Published
          </div>
        </div>
        <div
          class="flex gap-base min-w-0 grow"
        >
          <div
            class="min-w-0 grow"
          >
            <span
              data-state="closed"
            >
              <div
                class="flex gap-xs bg-white border border-neutral-300 rounded-sm items-center px-xs min-w-0"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 shrink-0"
                    data-testid="icon"
                  >
                    <div
                      class="h-sm w-sm"
                    />
                  </div>
                </div>
                <div
                  class="overflow-hidden text-xxs xxxl:!text-xs overflow-ellipsis whitespace-nowrap min-w-0 leading-[30px] xxxl:leading-[38px]"
                >
                  undefined/resume/amanda_jewess/testUrl
                </div>
                <span
                  class="ml-auto shrink-0"
                  data-state="closed"
                >
                  <button
                    class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] text-neutral-600 hover:!bg-neutral-200 outline-neutral-400 h-base w-base  !text-neutral-800"
                    data-testid="icon-button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </span>
          </div>
          <div
            class="flex shrink-0"
          >
            <label
              class="switch bg-white px-xs py-xxs xxxl:py-xs border-primary-500 rounded-sm h-md xxxl:h-[40px] mr-sm xxxl:mr-base shrink-0"
            >
              <span
                class="text-xs !text-xxs xxxl:!text-xs"
              >
                Enable share link
              </span>
              <div
                class="content"
              >
                <input
                  checked=""
                  class="switchInput"
                  name="portfolio"
                  role="switch"
                  type="checkbox"
                />
                <span
                  class="slider"
                />
              </div>
            </label>
            <a
              href="/portfolio/resume/amanda_jewess/testUrl"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mr-xs xxxl:mr-sm px-sm xxxl:px-base -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Preview
                </span>
              </button>
            </a>
            <a
              href="/portfolio/edit"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] py-xs px-sm xxxl:px-base -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Edit
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 space-x-base xxxl:space-x-md"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 sticky h-min"
          style="top: 0px;"
        >
          <div
            class="card p-sm xxxl:p-base w-full sticky top-base xxxl:top-md"
          >
            <div
              class="flex justify-between mb-sm xxxl:mb-base"
            >
              <img
                class="rounded-full w-[120px] xxxl:w-[160px] h-[120px] xxxl:h-[160px] border border-neutral-300 object-cover"
                src="SvgrURL"
                title="Amanda Jewess"
              />
            </div>
            <div
              class="flex flex-col text-xxs xxxl:text-xs font-regular leading-lg text-neutral-700"
            >
              <div
                class=" pb-sm"
              >
                <h6
                  class="mb-0 whitespace-nowrap text-neutral-800 text-xs xxxl:text-sm after:h-[1px] after:bg-neutral-300 after:grow flex justify-start items-center gap-sm"
                >
                  <span
                    class="min-w-0 text-ellipsis overflow-hidden"
                  >
                    Amanda Jewess
                  </span>
                </h6>
              </div>
              <div
                class="pb-base xxxl:pb-md"
              >
                Please add information to continue filling your portfolio's bio.
              </div>
              <a
                href="/portfolio/edit"
              >
                <button
                  class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                  data-testid="button"
                  type="button"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  <span
                    class="items-center flex justify-center gap-xs"
                  >
                    Fill portfolio
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
        <div
          class="w-full h-full flex flex-col min-h-0"
        >
          <div
            class="sticky z-higher pb-sm bg-neutral-200"
            style="top: 0px;"
          >
            <div
              class="triggerListContainer"
            >
              <div
                aria-orientation="horizontal"
                class="triggerList withPadding fullWidth"
                data-orientation="horizontal"
                role="tablist"
                style="outline: none;"
                tabindex="0"
              >
                <button
                  aria-controls="radix-11-content-RESUME"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-11-trigger-RESUME"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Resume
                </button>
                <button
                  aria-controls="radix-11-content-CAREERS"
                  aria-selected="true"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="active"
                  id="radix-11-trigger-CAREERS"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Defined Careers
                </button>
                <button
                  aria-controls="radix-11-content-PBL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-11-trigger-PBL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Learning
                </button>
                <button
                  aria-controls="radix-11-content-PERSONAL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-11-trigger-PERSONAL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Personal
                </button>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="radix-11-trigger-CAREERS"
            class="min-h-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-11-content-CAREERS"
            role="tabpanel"
            tabindex="0"
          >
            <div>
              <div
                class="card h-full flex flex-col min-h-0 !pt-0"
              >
                <div
                  class="flex justify-between py-base xxxl:pt-md  bg-white sticky z-high"
                  style="top: 0px;"
                />
                <div>
                  <div
                    class="mx-auto text-xs text-center w-[320px] xxxl:w-[360px]"
                  >
                    <div
                      class="mb-sm w-full"
                    />
                    <div
                      class="mx-auto"
                    >
                      <h6>
                        Defined Careers assignments are empty.
                      </h6>
                      <p
                        class="text-xs"
                      >
                        You don't have any projects currently. Submit a product to update your portfolio.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Portfolio should display empty personal projects 1`] = `
<div>
  <div
    class="p-base pt-xs xxxl:p-md xxxl:pt-sm !pt-0"
    id="read"
  >
    <div
      class="flex flex-col h-full"
    >
      <div
        class="w-full py-sm xxxl:py-base gap-base xxxl:gap-md bg-neutral-200 z-higher sticky flex shrink-0 items-center justify-between"
        style="top: 0px;"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 flex items-end gap-xs"
        >
          <h1
            class="text-base xxxl:text-lg mb-0 leading-base"
          >
            Portfolio
          </h1>
          <div
            class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-success-100 text-success-500 rounded-sm p-xxs text-xs gap-xxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            Published
          </div>
        </div>
        <div
          class="flex gap-base min-w-0 grow"
        >
          <div
            class="min-w-0 grow"
          >
            <span
              data-state="closed"
            >
              <div
                class="flex gap-xs bg-white border border-neutral-300 rounded-sm items-center px-xs min-w-0"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 shrink-0"
                    data-testid="icon"
                  >
                    <div
                      class="h-sm w-sm"
                    />
                  </div>
                </div>
                <div
                  class="overflow-hidden text-xxs xxxl:!text-xs overflow-ellipsis whitespace-nowrap min-w-0 leading-[30px] xxxl:leading-[38px]"
                >
                  undefined/resume/amanda_jewess/testUrl
                </div>
                <span
                  class="ml-auto shrink-0"
                  data-state="closed"
                >
                  <button
                    class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] text-neutral-600 hover:!bg-neutral-200 outline-neutral-400 h-base w-base  !text-neutral-800"
                    data-testid="icon-button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </span>
          </div>
          <div
            class="flex shrink-0"
          >
            <label
              class="switch bg-white px-xs py-xxs xxxl:py-xs border-primary-500 rounded-sm h-md xxxl:h-[40px] mr-sm xxxl:mr-base shrink-0"
            >
              <span
                class="text-xs !text-xxs xxxl:!text-xs"
              >
                Enable share link
              </span>
              <div
                class="content"
              >
                <input
                  checked=""
                  class="switchInput"
                  name="portfolio"
                  role="switch"
                  type="checkbox"
                />
                <span
                  class="slider"
                />
              </div>
            </label>
            <a
              href="/portfolio/resume/amanda_jewess/testUrl"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mr-xs xxxl:mr-sm px-sm xxxl:px-base -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Preview
                </span>
              </button>
            </a>
            <a
              href="/portfolio/edit"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] py-xs px-sm xxxl:px-base -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Edit
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 space-x-base xxxl:space-x-md"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 sticky h-min"
          style="top: 0px;"
        >
          <div
            class="card p-sm xxxl:p-base w-full sticky top-base xxxl:top-md"
          >
            <div
              class="flex justify-between mb-sm xxxl:mb-base"
            >
              <img
                class="rounded-full w-[120px] xxxl:w-[160px] h-[120px] xxxl:h-[160px] border border-neutral-300 object-cover"
                src="SvgrURL"
                title="Amanda Jewess"
              />
            </div>
            <div
              class="flex flex-col text-xxs xxxl:text-xs font-regular leading-lg text-neutral-700"
            >
              <div
                class=" pb-sm"
              >
                <h6
                  class="mb-0 whitespace-nowrap text-neutral-800 text-xs xxxl:text-sm after:h-[1px] after:bg-neutral-300 after:grow flex justify-start items-center gap-sm"
                >
                  <span
                    class="min-w-0 text-ellipsis overflow-hidden"
                  >
                    Amanda Jewess
                  </span>
                </h6>
              </div>
              <div
                class="pb-base xxxl:pb-md"
              >
                Please add information to continue filling your portfolio's bio.
              </div>
              <a
                href="/portfolio/edit"
              >
                <button
                  class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                  data-testid="button"
                  type="button"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  <span
                    class="items-center flex justify-center gap-xs"
                  >
                    Fill portfolio
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
        <div
          class="w-full h-full flex flex-col min-h-0"
        >
          <div
            class="sticky z-higher pb-sm bg-neutral-200"
            style="top: 0px;"
          >
            <div
              class="triggerListContainer"
            >
              <div
                aria-orientation="horizontal"
                class="triggerList withPadding fullWidth"
                data-orientation="horizontal"
                role="tablist"
                style="outline: none;"
                tabindex="0"
              >
                <button
                  aria-controls="radix-25-content-RESUME"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-25-trigger-RESUME"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Resume
                </button>
                <button
                  aria-controls="radix-25-content-CAREERS"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-25-trigger-CAREERS"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Careers
                </button>
                <button
                  aria-controls="radix-25-content-PBL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-25-trigger-PBL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Learning
                </button>
                <button
                  aria-controls="radix-25-content-PERSONAL"
                  aria-selected="true"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="active"
                  id="radix-25-trigger-PERSONAL"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  Personal
                </button>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="radix-25-trigger-PERSONAL"
            class="min-h-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-25-content-PERSONAL"
            role="tabpanel"
            tabindex="0"
          >
            <div>
              <div
                class="card h-full flex flex-col min-h-0 !pt-0"
              >
                <div
                  class="flex justify-between py-base xxxl:pt-md  bg-white sticky z-high"
                  style="top: 0px;"
                />
                <div>
                  <div
                    class="mx-auto text-xs text-center w-[320px] xxxl:w-[360px]"
                  >
                    <div
                      class="mb-sm w-full"
                    />
                    <div
                      class="mx-auto"
                    >
                      <h6>
                        Personal projects are empty.
                      </h6>
                      <p
                        class="text-xs"
                      >
                        You don't have any projects currently. Submit a product to update your portfolio.
                      </p>
                    </div>
                    <button
                      class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mx-auto -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                      data-testid="create-new-project"
                      type="submit"
                      value="createPersonalProject"
                    >
                      <span
                        class="items-center flex justify-center gap-xs"
                      >
                        Create Project
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Portfolio should display student resume 1`] = `
<div>
  <div
    class="p-base pt-xs xxxl:p-md xxxl:pt-sm !pt-0"
    id="read"
  >
    <div
      class="flex flex-col h-full"
    >
      <div
        class="w-full py-sm xxxl:py-base gap-base xxxl:gap-md bg-neutral-200 z-higher sticky flex shrink-0 items-center justify-between"
        style="top: 0px;"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 flex items-end gap-xs"
        >
          <h1
            class="text-base xxxl:text-lg mb-0 leading-base"
          >
            Portfolio
          </h1>
          <div
            class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-success-100 text-success-500 rounded-sm p-xxs text-xs gap-xxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            Published
          </div>
        </div>
        <div
          class="flex gap-base min-w-0 grow"
        >
          <div
            class="min-w-0 grow"
          >
            <span
              data-state="closed"
            >
              <div
                class="flex gap-xs bg-white border border-neutral-300 rounded-sm items-center px-xs min-w-0"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 shrink-0"
                    data-testid="icon"
                  >
                    <div
                      class="h-sm w-sm"
                    />
                  </div>
                </div>
                <div
                  class="overflow-hidden text-xxs xxxl:!text-xs overflow-ellipsis whitespace-nowrap min-w-0 leading-[30px] xxxl:leading-[38px]"
                >
                  undefined/resume/amanda_jewess/testUrl
                </div>
                <span
                  class="ml-auto shrink-0"
                  data-state="closed"
                >
                  <button
                    class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] text-neutral-600 hover:!bg-neutral-200 outline-neutral-400 h-base w-base  !text-neutral-800"
                    data-testid="icon-button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </span>
          </div>
          <div
            class="flex shrink-0"
          >
            <label
              class="switch bg-white px-xs py-xxs xxxl:py-xs border-primary-500 rounded-sm h-md xxxl:h-[40px] mr-sm xxxl:mr-base shrink-0"
            >
              <span
                class="text-xs !text-xxs xxxl:!text-xs"
              >
                Enable share link
              </span>
              <div
                class="content"
              >
                <input
                  checked=""
                  class="switchInput"
                  name="portfolio"
                  role="switch"
                  type="checkbox"
                />
                <span
                  class="slider"
                />
              </div>
            </label>
            <a
              href="/portfolio/resume/amanda_jewess/testUrl"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mr-xs xxxl:mr-sm px-sm xxxl:px-base -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Preview
                </span>
              </button>
            </a>
            <a
              href="/portfolio/edit"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] py-xs px-sm xxxl:px-base -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Edit
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 space-x-base xxxl:space-x-md"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 sticky h-min"
          style="top: 0px;"
        >
          <div
            class="card p-sm xxxl:p-base w-full sticky top-base xxxl:top-md"
          >
            <div
              class="flex justify-between mb-sm xxxl:mb-base"
            >
              <img
                class="rounded-full w-[120px] xxxl:w-[160px] h-[120px] xxxl:h-[160px] border border-neutral-300 object-cover"
                src="student.png"
                title="Amanda Jewess"
              />
            </div>
            <div
              class="flex flex-col text-xxs xxxl:text-xs font-regular leading-lg text-neutral-700"
            >
              <div
                class=" pb-sm"
              >
                <h6
                  class="mb-0 whitespace-nowrap text-neutral-800 text-xs xxxl:text-sm after:h-[1px] after:bg-neutral-300 after:grow flex justify-start items-center gap-sm"
                >
                  <span
                    class="min-w-0 text-ellipsis overflow-hidden"
                  >
                    Amanda Jewess
                  </span>
                </h6>
              </div>
              <div
                class="pb-base xxxl:pb-md"
              >
                some Bio info DC Lorem
              </div>
            </div>
            <div
              class="pb-base"
            >
              <div
                class="flex gap-sm items-center pb-sm"
              >
                <h6
                  class="mb-0 min-w-0 text-neutral-800 text-xs xxxl:text-sm"
                >
                  Contact
                </h6>
                <hr
                  class="flex-1 h-px text-neutral-300"
                />
              </div>
              <div
                class="flex flex-wrap gap-xs"
              >
                <a
                  class="flex !p-xxs xxxl:!p-xs justify-center items-center gap-xxs bg-neutral-200 !text-neutral-800 rounded-sm text-xxs font-medium leading-lg hover:bg-primary-200 hover:!text-primary-500 !no-underline  active:bg-primary-500 active:!text-white"
                  href="mailto:amanda@dc.com"
                  target="_blank"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  amanda@dc.com
                </a>
                <a
                  class="flex !p-xxs xxxl:!p-xs justify-center items-center gap-xxs bg-neutral-200 !text-neutral-800 rounded-sm text-xxs font-medium leading-lg hover:bg-primary-200 hover:!text-primary-500 !no-underline  active:bg-primary-500 active:!text-white"
                  href="tel:414-313-7621"
                  target="_blank"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  414-313-7621
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full h-full flex flex-col min-h-0"
        >
          <div
            class="sticky z-higher pb-sm bg-neutral-200"
            style="top: 0px;"
          >
            <div
              class="triggerListContainer"
            >
              <div
                aria-orientation="horizontal"
                class="triggerList withPadding fullWidth"
                data-orientation="horizontal"
                role="tablist"
                style="outline: none;"
                tabindex="0"
              >
                <button
                  aria-controls="radix-32-content-RESUME"
                  aria-selected="true"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="active"
                  id="radix-32-trigger-RESUME"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Resume
                </button>
                <button
                  aria-controls="radix-32-content-CAREERS"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-32-trigger-CAREERS"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Careers
                </button>
                <button
                  aria-controls="radix-32-content-PBL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-32-trigger-PBL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Learning
                </button>
                <button
                  aria-controls="radix-32-content-PERSONAL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-32-trigger-PERSONAL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Personal
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full flex flex-col gap-base xxxl:gap-md"
          >
            <div
              class="card flex flex-col gap-sm xxxl:gap-base"
            >
              <div
                class="flex gap-sm items-center"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-700 p-xs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
                <h5
                  class="mb-0 leading-base text-sm xxxl:text-base"
                >
                  Experience
                </h5>
              </div>
              <div
                class="pl-lg"
              >
                <div
                  class="text-xs xxxl:text-sm text-neutral-700 pl-xs pb-sm xxxl:pb-base last:pb-0"
                >
                  <div
                    class="flex gap-xs items-center pb-xs"
                  >
                    <p
                      class="mb-0 text-neutral-800 font-medium"
                    >
                      title
                    </p>
                    <div
                      class="h-xxs w-xxs bg-neutral-300 rounded-lg"
                    />
                    <div
                      class="flex items-center gap-xxs whitespace-nowrap"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 text-neutral-700"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <p
                        class="mb-0"
                      >
                        Jan 2024
                      </p>
                      <p
                        class="mb-0"
                      >
                        - Apr 2024
                      </p>
                    </div>
                  </div>
                  <p
                    class="mb-0 ml-sm text-xxs xxxl:text-xs"
                  >
                    some experience 1
                  </p>
                </div>
              </div>
            </div>
            <div
              class="card flex flex-col gap-sm xxxl:gap-base"
            >
              <div
                class="flex gap-sm items-center"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-700 p-xs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
                <h5
                  class="mb-0 leading-base text-sm xxxl:text-base"
                >
                  Education
                </h5>
              </div>
              <div
                class="pl-lg"
              >
                <div
                  class="text-xs xxxl:text-sm text-neutral-700 pl-xs pb-sm xxxl:pb-base last:pb-0"
                >
                  <div
                    class="flex gap-xs items-center pb-xs"
                  >
                    <p
                      class="mb-0 text-neutral-800 font-medium"
                    >
                      Education 1
                    </p>
                    <div
                      class="h-xxs w-xxs bg-neutral-300 rounded-lg"
                    />
                    <div
                      class="flex items-center gap-xxs whitespace-nowrap"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 text-neutral-700"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <p
                        class="mb-0"
                      >
                        Jan 2024
                      </p>
                      <p
                        class="mb-0"
                      >
                        - Apr 2024
                      </p>
                    </div>
                  </div>
                  <p
                    class="mb-0 ml-sm text-xxs xxxl:text-xs"
                  >
                    some Education
                  </p>
                </div>
              </div>
            </div>
            <div
              class="card flex flex-col gap-sm xxxl:gap-base"
            >
              <div
                class="flex gap-sm items-center"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-700 p-xs"
                    data-testid="icon"
                  >
                    <div
                      class="h-base w-base"
                    />
                  </div>
                </div>
                <h5
                  class="mb-0 leading-base text-sm xxxl:text-base"
                >
                  Extra-Curriculars
                </h5>
              </div>
              <div
                class="pl-lg"
              >
                <div
                  class="text-xs xxxl:text-sm text-neutral-700 pl-xs pb-sm xxxl:pb-base last:pb-0"
                >
                  <div
                    class="flex gap-xs items-center pb-xs"
                  >
                    <p
                      class="mb-0 text-neutral-800 font-medium"
                    >
                      Extra curriculars 1
                    </p>
                    <div
                      class="h-xxs w-xxs bg-neutral-300 rounded-lg"
                    />
                    <div
                      class="flex items-center gap-xxs whitespace-nowrap"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 text-neutral-700"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <p
                        class="mb-0"
                      >
                        Jan 2024
                      </p>
                      <p
                        class="mb-0"
                      >
                        - Jul 2024
                      </p>
                    </div>
                  </div>
                  <p
                    class="mb-0 ml-sm text-xxs xxxl:text-xs"
                  >
                    some Extra curriculars 1
                  </p>
                </div>
              </div>
            </div>
            <div
              class="card"
            >
              <div
                class="flex justify-between w-full items-start mb-sm"
              >
                <div
                  class="flex items-center gap-sm"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-700 p-xs"
                      data-testid="icon"
                    >
                      <div
                        class="h-base w-base"
                      />
                    </div>
                  </div>
                  <h5
                    class="mb-0 leading-base text-sm xxxl:text-base"
                  >
                    Highlighted projects
                  </h5>
                </div>
              </div>
              <div
                class="flex gap-sm xxxl:gap-base bg-white rounded-sm text-font-primary p-sm group/portfolio-project-card hover:bg-neutral-200 cursor-pointer"
                data-testid="portfolio-project-card"
              >
                <div
                  class="wrapper-header basis-[170px] shrink-0 relative h-full"
                >
                  <div
                    class="absolute bottom-xs left-xs z-lowest"
                    data-testid="project-source-badge"
                  >
                    <span
                      class="truncate"
                      data-state="closed"
                    >
                      <div
                        class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-secondary-200 text-secondary-500 p-xxxs text-xxs rounded-xs gap-xxxs"
                      >
                        Careers
                      </div>
                    </span>
                  </div>
                  <div
                    class="wrapper-image group w-full flex-grow h-[100px] max-h-full max-w-[178px] relative rounded-sm overflow-hidden"
                  >
                    <div
                      class="flex gap-xs absolute left-sm top-sm"
                    />
                    <img
                      alt="project-image"
                      class="h-full w-full object-cover object-center"
                      src="someimage.png"
                    />
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="flex justify-between mb-xs"
                  >
                    <div
                      class="w-full"
                    >
                      <div
                        class="font-xs leading-lg text-xs mb-xxs text-neutral-700"
                      >
                        Taxi Drivers
                      </div>
                      <h6
                        class="text-xs xxxl:text-sm mb-0"
                        data-testid="portfolio-project-card-heading"
                      >
                        Taxi Driver Schedule
                      </h6>
                    </div>
                  </div>
                  <div
                    class="relative"
                  >
                    <div
                      class="mb-xs text-xxs xxxl:text-xs text-neutral-700 leading-lg [&_a]:break-all line-clamp-2"
                    >
                      <p>
                        Taxi drivers
                      </p>
                    </div>
                  </div>
                  <button
                    class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !pl-0 -link py-xs px-sm !text-xs leading-[14px] !gap-xxs flex-row-reverse text-white"
                    data-testid="button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                    <span
                      class="items-center flex justify-center gap-xs"
                    >
                      <span>
                        Show Files
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Portfolio should render empty state correctly 1`] = `
<div>
  <div
    class="p-base pt-xs xxxl:p-md xxxl:pt-sm !pt-0"
    id="read"
  >
    <div
      class="flex flex-col h-full"
    >
      <div
        class="w-full py-sm xxxl:py-base gap-base xxxl:gap-md bg-neutral-200 z-higher sticky flex shrink-0 items-center justify-between"
        style="top: 0px;"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 flex items-end gap-xs"
        >
          <h1
            class="text-base xxxl:text-lg mb-0 leading-base"
          >
            Portfolio
          </h1>
          <div
            class="font-medium leading-lg flex items-center !rounded-full !leading-base h-base truncate bg-success-100 text-success-500 rounded-sm p-xxs text-xs gap-xxs"
          >
            <div
              class="flex"
            >
              <div
                class="flex align-center justify-center grow-0 shrink-0"
                data-testid="icon"
              >
                <div
                  class="h-sm w-sm"
                />
              </div>
            </div>
            Published
          </div>
        </div>
        <div
          class="flex gap-base min-w-0 grow"
        >
          <div
            class="min-w-0 grow"
          >
            <span
              data-state="closed"
            >
              <div
                class="flex gap-xs bg-white border border-neutral-300 rounded-sm items-center px-xs min-w-0"
              >
                <div
                  class="flex"
                >
                  <div
                    class="flex align-center justify-center grow-0 shrink-0 shrink-0"
                    data-testid="icon"
                  >
                    <div
                      class="h-sm w-sm"
                    />
                  </div>
                </div>
                <div
                  class="overflow-hidden text-xxs xxxl:!text-xs overflow-ellipsis whitespace-nowrap min-w-0 leading-[30px] xxxl:leading-[38px]"
                >
                  undefined/resume/amanda_jewess/testUrl
                </div>
                <span
                  class="ml-auto shrink-0"
                  data-state="closed"
                >
                  <button
                    class="flex items-center justify-center transition-colors rounded-sm border border-transparent cursor-pointer focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] text-neutral-600 hover:!bg-neutral-200 outline-neutral-400 h-base w-base  !text-neutral-800"
                    data-testid="icon-button"
                    type="button"
                  >
                    <div
                      class="flex"
                    >
                      <div
                        class="flex align-center justify-center grow-0 shrink-0"
                        data-testid="icon"
                      >
                        <div
                          class="h-sm w-sm"
                        />
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </span>
          </div>
          <div
            class="flex shrink-0"
          >
            <label
              class="switch bg-white px-xs py-xxs xxxl:py-xs border-primary-500 rounded-sm h-md xxxl:h-[40px] mr-sm xxxl:mr-base shrink-0"
            >
              <span
                class="text-xs !text-xxs xxxl:!text-xs"
              >
                Enable share link
              </span>
              <div
                class="content"
              >
                <input
                  checked=""
                  class="switchInput"
                  name="portfolio"
                  role="switch"
                  type="checkbox"
                />
                <span
                  class="slider"
                />
              </div>
            </label>
            <a
              href="/portfolio/resume/amanda_jewess/testUrl"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] mr-xs xxxl:mr-sm px-sm xxxl:px-base -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Preview
                </span>
              </button>
            </a>
            <a
              href="/portfolio/edit"
            >
              <button
                class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] py-xs px-sm xxxl:px-base -primary bg-primary-500 hover:bg-primary-600 outline-primary-500 border-primary-500 py-xs px-sm !text-xs leading-[14px] !gap-xxs border text-white"
                data-testid="button"
                type="button"
              >
                <span
                  class="items-center flex justify-center gap-xs"
                >
                  Edit
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 space-x-base xxxl:space-x-md"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          class="w-[362px] xxxl:w-[512px] grow-0 shrink-0 sticky h-min"
          style="top: 0px;"
        >
          <div
            class="card p-sm xxxl:p-base w-full sticky top-base xxxl:top-md"
          >
            <div
              class="flex justify-between mb-sm xxxl:mb-base"
            >
              <img
                class="rounded-full w-[120px] xxxl:w-[160px] h-[120px] xxxl:h-[160px] border border-neutral-300 object-cover"
                src="SvgrURL"
                title="Amanda Jewess"
              />
            </div>
            <div
              class="flex flex-col text-xxs xxxl:text-xs font-regular leading-lg text-neutral-700"
            >
              <div
                class=" pb-sm"
              >
                <h6
                  class="mb-0 whitespace-nowrap text-neutral-800 text-xs xxxl:text-sm after:h-[1px] after:bg-neutral-300 after:grow flex justify-start items-center gap-sm"
                >
                  <span
                    class="min-w-0 text-ellipsis overflow-hidden"
                  >
                    Amanda Jewess
                  </span>
                </h6>
              </div>
              <div
                class="pb-base xxxl:pb-md"
              >
                Please add information to continue filling your portfolio's bio.
              </div>
              <a
                href="/portfolio/edit"
              >
                <button
                  class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -primary-outlined text-primary-500 hover:bg-primary-200 py-xs px-sm !text-xs leading-[14px] !gap-xxs border"
                  data-testid="button"
                  type="button"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                      data-testid="icon"
                    >
                      <div
                        class="h-sm w-sm"
                      />
                    </div>
                  </div>
                  <span
                    class="items-center flex justify-center gap-xs"
                  >
                    Fill portfolio
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
        <div
          class="w-full h-full flex flex-col min-h-0"
        >
          <div
            class="sticky z-higher pb-sm bg-neutral-200"
            style="top: 0px;"
          >
            <div
              class="triggerListContainer"
            >
              <div
                aria-orientation="horizontal"
                class="triggerList withPadding fullWidth"
                data-orientation="horizontal"
                role="tablist"
                style="outline: none;"
                tabindex="0"
              >
                <button
                  aria-controls="radix-4-content-RESUME"
                  aria-selected="true"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="active"
                  id="radix-4-trigger-RESUME"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Resume
                </button>
                <button
                  aria-controls="radix-4-content-CAREERS"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-4-trigger-CAREERS"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Careers
                </button>
                <button
                  aria-controls="radix-4-content-PBL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-4-trigger-PBL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Defined Learning
                </button>
                <button
                  aria-controls="radix-4-content-PERSONAL"
                  aria-selected="false"
                  class="triggerListItem"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  data-state="inactive"
                  id="radix-4-trigger-PERSONAL"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  Personal
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full flex flex-col gap-base xxxl:gap-md"
          >
            <div
              class="card p-sm xxxl:p-base text-neutral-700 flex flex-col gap-base xxxl:gap-md"
            >
              <div
                class="flex gap-sm xxxl:gap-base"
              >
                <div
                  class="flex gap-sm items-center"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-400 p-sm"
                      data-testid="icon"
                    >
                      <div
                        class="h-2lg w-2lg"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="xxxl:pt-base"
                >
                  <div
                    class="flex flex-col gap-xs"
                  >
                    <h5
                      class="mb-0 text-neutral-800 leading-base text-sm xxxl:text-base font-bold"
                    >
                      Experience
                    </h5>
                    <p
                      class="text-neutral-700 text-xs xxxl:text-sm leading-lg font-regular max-w-prose"
                    >
                      You haven’t added your Experience yet.
                    </p>
                  </div>
                  <a
                    href="/portfolio/edit/#Experience"
                  >
                    <button
                      class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -link py-xs px-sm !text-xs leading-[14px] !gap-xxs flex-row-reverse text-white"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <span
                        class="items-center flex justify-center gap-xs"
                      >
                        Add new
                      </span>
                    </button>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="card p-sm xxxl:p-base text-neutral-700 flex flex-col gap-base xxxl:gap-md"
            >
              <div
                class="flex gap-sm xxxl:gap-base"
              >
                <div
                  class="flex gap-sm items-center"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-400 p-sm"
                      data-testid="icon"
                    >
                      <div
                        class="h-2lg w-2lg"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="xxxl:pt-base"
                >
                  <div
                    class="flex flex-col gap-xs"
                  >
                    <h5
                      class="mb-0 text-neutral-800 leading-base text-sm xxxl:text-base font-bold"
                    >
                      Education
                    </h5>
                    <p
                      class="text-neutral-700 text-xs xxxl:text-sm leading-lg font-regular max-w-prose"
                    >
                      You haven’t added your Education yet.
                    </p>
                  </div>
                  <a
                    href="/portfolio/edit/#Education"
                  >
                    <button
                      class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -link py-xs px-sm !text-xs leading-[14px] !gap-xxs flex-row-reverse text-white"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <span
                        class="items-center flex justify-center gap-xs"
                      >
                        Add new
                      </span>
                    </button>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="card p-sm xxxl:p-base text-neutral-700 flex flex-col gap-base xxxl:gap-md"
            >
              <div
                class="flex gap-sm xxxl:gap-base"
              >
                <div
                  class="flex gap-sm items-center"
                >
                  <div
                    class="flex"
                  >
                    <div
                      class="flex align-center justify-center grow-0 shrink-0 rounded-sm bg-neutral-200 text-neutral-400 p-sm"
                      data-testid="icon"
                    >
                      <div
                        class="h-2lg w-2lg"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="xxxl:pt-base"
                >
                  <div
                    class="flex flex-col gap-xs"
                  >
                    <h5
                      class="mb-0 text-neutral-800 leading-base text-sm xxxl:text-base font-bold"
                    >
                      Extra-Curriculars
                    </h5>
                    <p
                      class="text-neutral-700 text-xs xxxl:text-sm leading-lg font-regular max-w-prose"
                    >
                      You haven’t added your Extra-Curriculars yet.
                    </p>
                  </div>
                  <a
                    href="/portfolio/edit/#Extra-Curriculars"
                  >
                    <button
                      class="button flex items-center justify-center gap-xs rounded-sm cursor-pointer text-sm font-medium no-underline focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-[3px] !no-underline -link py-xs px-sm !text-xs leading-[14px] !gap-xxs flex-row-reverse text-white"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 h-[14px] mt-[-1px]"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                      <span
                        class="items-center flex justify-center gap-xs"
                      >
                        Add new
                      </span>
                    </button>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
